Globally replace template placeholder string.
Used: FindReplaceCode . ProjectName Faithlife.Utility RepoName FaithlifeUtility

--- a/docs/_layouts/page.html
+++ b/docs/_layouts/page.html
@@ -19,19 +19,19 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="{{ "/" | relative_url }}">ProjectName</a>
+          <a class="navbar-brand" href="{{ "/" | relative_url }}">Faithlife.Utility</a>
         </div>
         <div class="navbar-collapse collapse" id="navbar-main">
           <ul class="nav navbar-nav">
-            <li><a href="{{ "/ProjectName" | relative_url }}">Reference</a></li>
+            <li><a href="{{ "/Faithlife.Utility" | relative_url }}">Reference</a></li>
           </ul>
           <ul class="nav navbar-nav navbar-right">
             <li class="dropdown">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false"><img src="{{ "/assets/github.png" | relative_url }}" class="github-logo"> <span class="caret"></span></a>
               <ul class="dropdown-menu" role="menu">
-                <li><a href="https://github.com/Faithlife/RepoName">View Source Code</a></li>
-                <li><a href="https://github.com/Faithlife/RepoName/blob/master/LICENSE">View License</a></li>
-                <li><a href="https://github.com/Faithlife/RepoName/blob/master/docs/{{ page.path }}">Edit This Page</a></li>
+                <li><a href="https://github.com/Faithlife/FaithlifeUtility">View Source Code</a></li>
+                <li><a href="https://github.com/Faithlife/FaithlifeUtility/blob/master/LICENSE">View License</a></li>
+                <li><a href="https://github.com/Faithlife/FaithlifeUtility/blob/master/docs/{{ page.path }}">Edit This Page</a></li>
               </ul>
             </li>
           </ul>
